--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ dependencies {
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
     implementation 'com.fazecast:jSerialComm:[2.0.0,3.0.0)'
+    implementation 'org.yaml:snakeyaml:2.2'
 }
 
 test {
